# face_embed

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  dockerfile  prepare_db.sql
.sqlx/: query-1fe1be9b46044e97794e6268347680a2e33b4aa7d13ec0111a5298fad02965bf.json  query-31392ae21c30b59c69999cc0dc860e2d23c95f5c73e73342f088c5e86f9a2a5d.json  query-3caa64aa158e5c2f740015f9886901aecb48f8af4b517843814de6795c13a04c.json  query-681dd3af8b7e79d4c3df2634acfbb5fa85f779718927da4904a5e39c5348bc5a.json  query-6e47a30512a4eedfbdd59e8435f3d4a0165aa906adc9118c68894c627d80d2b2.json  query-9f1a58e2876d028c3bdc0f692525116a08e6fc61b1bcf689d2892dd0bf8d326d.json  query-a4b30bb91f978184dcabd1b02e82a2b5344a24ec5d5f3264ae09526587284010.json  query-aa3770c67caa025922b16554cfc32ded31ed705af3db41f1e1b7eb694a310795.json  query-c2903e1e2b86092ae4fc9e4491f745da4180ef65e185b993d9f7756abc910a24.json  query-cfe9d355e0c749bb9e062b8a1fabfbddccef8c12ee74d408cf88cdca8ce77f19.json  query-f5050bbd6dba8ac15d88b372b2637cff735220bd91f05fd06572ae294c2af722.json  query-f839d9d2af6404b8cc7361fd195a58460b9d6c3f0febc06469b509588384cc57.json  query-f9597b9054ee7b43d8162ca5a5701163ee952963793a6e2e1d52c031afc755d4.json
backend/: Cargo.toml
backend/src/: main.rs
consumers/: Cargo.toml
consumers/src/: main.rs
face_embed/: Cargo.toml
face_embed/.sqlx/: query-738721113b38692859f4277a17ea73863a76d31a63d3bfa955d2b86335fac851.json  query-8d2eedd3856d2a3a5094f8448f3ba641f7721f109d50bd712c5581c9a0d28196.json  query-d518480107603920dcd040b59028b0b021b0755c6812d584dc1924606ddc48d6.json  query-e04ee25f55fe84ecba20e1b836d5394c34b2aac63404bc03efba89a00ba91c15.json  query-e058c185316728567c0255059994071777d106c1cd20686f354039cd41408898.json
face_embed/src/: cache.rs  db.rs  embedding.rs  face_detector.rs  image_utils.rs  lib.rs  messaging.rs  opencv_backend.rs  ort_backend.rs  path_utils.rs  pipeline.rs  storage.rs  tract_backend.rs
faces/: Cargo.toml
faces/src/: embed.rs  main.rs
frontend/: Cargo.toml  Dioxus.toml  no
frontend/assets/: main.css
frontend/src/: canvas.rs  main.rs
src/: main.rs
