[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = "1.37.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
face_embed = { path = "../face_embed" }
image = "0.25"
