[package]
name = "consumers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.3.1"
tokio = "1.37.0"
face_embed = { path = "../face_embed" }
futures-lite = "2.3.0"
serde = "1.*"
rmp-serde = "1.1.2"
lettre = "0.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
mini-moka = "0.10.3"
