[package]
name = "consumers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.3.1"
clap = { version = "4.5.2", features = ["derive", "env"] }
tokio = "1.37.0"
face_embed = { path = "../face_embed" }
futures-lite = "2.3.0"
serde = "1.*"
lettre = "0.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
mini-moka = "0.10.3"
anyhow = "1.0.86"
image = "0.25.2"
serde_json = "1.0.127"
