[package]
name = "face_embed"
version = "0.1.0"
edition = "2021"

[dependencies]
fast_image_resize = "3.0.4"
image = "0.24.9"
ndarray = "0.15.6"
num-traits = "0.2.18"
tract-onnx = "0.21.1"
rand = "0.8.5"
anyhow = "1.0.80"
pgvector = { version = "0.3", features = ["sqlx"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "postgres", "chrono" ] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.30"
linfa = "0.7.0"
linfa-tsne = "0.7.0"
linfa-reduction = "0.7.0"
glob = "0.3.1"
plotters = "0.3.5"
clap = { version = "4.5.2", features = ["derive"] }
rayon = "1.9.0"
lapin = "2.3.1"
linfa-preprocessing = "0.7.0"

[dependencies.rust-s3]
git = "https://github.com/durch/rust-s3.git"

[dependencies.nokhwa]
git = "https://github.com/l1npengtul/nokhwa.git"
rev = "ea971242a888987222375189fb78c84fa85e5a4e"
features = [ "input-native" ]
