[package]
name = "face_embed"
version = "0.1.0"
edition = "2021"

[dependencies]
fast_image_resize = "3.0.4"
image = "0.24.9"
ndarray = "0.15.6"
num-traits = "0.2.18"
ort = "2.0.0-alpha.4"
rand = "0.8.5"
anyhow = "1.0.80"
pgvector = { version = "0.3", features = ["sqlx"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "postgres", "chrono", "tls-rustls" ] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.30"
clap = { version = "4.5.2", features = ["derive"] }
rayon = "1.9.0"
lapin = "2.3.1"
serde = { version = "1.0.197", features = ["derive"] }
rmp-serde = "1.1.2"
chrono = { version = "0.4.35", features = ["serde"] }

[dependencies.rust-s3]
# git = "https://github.com/durch/rust-s3.git"
version = "0.33.0"
default-features = false
features = ["tokio-rustls-tls"]

[dependencies.nokhwa]
git = "https://github.com/l1npengtul/nokhwa.git"
rev = "ea971242a888987222375189fb78c84fa85e5a4e"
features = [ "input-native" ]
