[package]
name = "face_embed"
version = "0.1.0"
edition = "2021"

[dependencies]
fast_image_resize = "3.0.4"
image = "0.25"
ndarray = "0.15.6"
num-traits = "0.2.18"
base64 = "0.22.0"
uuid = { version = "1.8.0", features = ["v7", "serde"] }
rand = "0.8.5"
anyhow = "1.0.80"
pgvector = { version = "0.3", features = ["sqlx"] }
sqlx = { version = "0.7.3", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "tls-rustls",
] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.30"
clap = { version = "4.5.2", features = ["derive"] }
rayon = "1.9.0"
lapin = "2.3.1"
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde"] }
imgref = "1.10.1"
bytemuck = "1.15.0"
async-trait = "0.1.80"
serde_json = "1.0.127"
ort = { version = "2.0.0-rc.1", optional = true }
tract-onnx = { version = "0.21.1", optional = true }
opencv = { version = "0.92.0", features = ["clang-runtime"], optional = true }

[dependencies.rust-s3]
version = "0.35.1"
default-features = false
features = ["tokio-rustls-tls"]

[features]
default = ["opencv"]
ort = ["dep:ort"]
tract = ["dep:tract-onnx"]
opencv = ["dep:opencv"]
