[package]
name = "frontend"
version = "0.1.0"
authors = ["Austin Kearns <austinkearns47@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Debug
# log = "0.4.19"
dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
# dioxus = { version = "*", features = ["fullstack", "router"] }
# serde = { version = "1.0.*", features = ["derive"] }
# face_embed = { path = "../face_embed" }
# dioxus-web = "*"
# dioxus-logger = "*"
# tracing = "*"
# console_error_panic_hook = "0.1.7"

# plotters = "0.3.5"
# plotters-canvas = "0.3.0"
# dioxus-fullstack = { version = "*" }
# axum = { version = "0.7.5", optional = true }
# [features]
# default = ["server"]
# default = []
# server = ["axum", "dioxus/axum"]
# web = ["dioxus/web"]
